[gd_scene load_steps=117 format=3 uid="uid://bhcv3qhvbuahj"]

[ext_resource type="Script" path="res://scripts/base_map.gd" id="1_d4akg"]
[ext_resource type="PackedScene" uid="uid://1fbhfp67w6j0" path="res://scenes/interface/screen_capture.tscn" id="1_n6ccm"]
[ext_resource type="PackedScene" uid="uid://d1n2f6dbgrw4q" path="res://scenes/pokemon/gen5/audino.tscn" id="2_231kt"]
[ext_resource type="PackedScene" uid="uid://bntgjwgly2d8k" path="res://scenes/pokemon/gen1/articuno.tscn" id="2_uu6u3"]
[ext_resource type="FontFile" uid="uid://te4s31qddkik" path="res://assets/font/njo_14.ttf" id="3_a26c1"]
[ext_resource type="PackedScene" uid="uid://caytunxghrl0p" path="res://scenes/interface/shop.tscn" id="3_h25u6"]
[ext_resource type="PackedScene" uid="uid://05o7lqiqqyy3" path="res://scenes/pokemon/gen1/zapdos.tscn" id="3_ox3qn"]
[ext_resource type="PackedScene" uid="uid://dvtyd7sfqfwes" path="res://scenes/pokemon/gen5/basculin.tscn" id="3_qs2sg"]
[ext_resource type="PackedScene" uid="uid://ykh7i633v62b" path="res://scenes/pokemon/gen1/moltres.tscn" id="4_55rk3"]
[ext_resource type="Texture2D" uid="uid://bg1r3h4w18aea" path="res://assets/prefabs/background_map/background_3.png" id="4_eruwt"]
[ext_resource type="PackedScene" uid="uid://dxi4a4762qk2f" path="res://scenes/pokemon/gen5/blitzle.tscn" id="4_j2f0e"]
[ext_resource type="PackedScene" uid="uid://dgyoygbgbyr6k" path="res://scenes/pokemon/gen1/mew.tscn" id="5_407qi"]
[ext_resource type="PackedScene" uid="uid://cikhn0uhqki2m" path="res://scenes/pokemon/gen5/boldore.tscn" id="5_ci1oi"]
[ext_resource type="PackedScene" uid="uid://clvto13oeut85" path="res://scenes/pokemon/gen1/mewtwo.tscn" id="6_q7q16"]
[ext_resource type="PackedScene" uid="uid://c7nqx758nqblp" path="res://scenes/pokemon/gen5/conkeldurr.tscn" id="6_uj80e"]
[ext_resource type="PackedScene" uid="uid://cm8o0eax001hf" path="res://scenes/pokemon/gen2/Entei.tscn" id="7_78ihx"]
[ext_resource type="PackedScene" uid="uid://dkwaatbo311uf" path="res://scenes/pokemon/gen5/cottonee.tscn" id="7_nsdw6"]
[ext_resource type="PackedScene" uid="uid://t0us07mskg17" path="res://scenes/pokemon/gen5/dewott.tscn" id="8_bxb4p"]
[ext_resource type="PackedScene" uid="uid://bpgm56c1bw5ve" path="res://scenes/pokemon/gen2/Suicune.tscn" id="8_secvh"]
[ext_resource type="PackedScene" uid="uid://f1qtpwupvlvr" path="res://scenes/pokemon/gen5/drilbur.tscn" id="9_oq7tt"]
[ext_resource type="PackedScene" uid="uid://bu348khcctsot" path="res://scenes/pokemon/gen2/Raikou.tscn" id="9_w86nl"]
[ext_resource type="PackedScene" uid="uid://bvgc6xtt2e4wc" path="res://scenes/pokemon/gen5/emboar.tscn" id="10_1s2q5"]
[ext_resource type="PackedScene" uid="uid://du2qddvlvhcwb" path="res://scenes/pokemon/gen2/Ho-oh.tscn" id="10_hkum5"]
[ext_resource type="PackedScene" uid="uid://sf4fuwy6oyev" path="res://scenes/pokemon/gen2/Lugia.tscn" id="11_3rsnu"]
[ext_resource type="PackedScene" uid="uid://bpj26u6lopnai" path="res://scenes/pokemon/gen5/excadrill.tscn" id="11_4iu6b"]
[ext_resource type="PackedScene" uid="uid://cn4hvw4am1tbx" path="res://scenes/pokemon/gen5/gigalith.tscn" id="12_68g6d"]
[ext_resource type="PackedScene" uid="uid://dhhings1hhwob" path="res://scenes/pokemon/gen2/Celebi.tscn" id="12_c8i4c"]
[ext_resource type="PackedScene" uid="uid://ce1liaa1iqg0j" path="res://scenes/pokemon/gen3/regirock.tscn" id="13_4tejs"]
[ext_resource type="PackedScene" uid="uid://dqoyudy21gv4m" path="res://scenes/pokemon/gen5/gurdurr.tscn" id="13_bsw4g"]
[ext_resource type="PackedScene" uid="uid://dbej702ybpcjg" path="res://scenes/pokemon/gen5/herdier.tscn" id="14_euyid"]
[ext_resource type="PackedScene" uid="uid://dnaxypnpigjlt" path="res://scenes/pokemon/gen3/regice.tscn" id="14_loiwo"]
[ext_resource type="PackedScene" uid="uid://bpwv13obint4b" path="res://scenes/pokemon/gen3/registeel.tscn" id="15_23uya"]
[ext_resource type="PackedScene" uid="uid://d2hr2dk5uwxfd" path="res://scenes/pokemon/gen5/krokorok.tscn" id="15_nj8m4"]
[ext_resource type="PackedScene" uid="uid://xvovwh3s4sew" path="res://scenes/pokemon/gen3/latias.tscn" id="16_aod8q"]
[ext_resource type="PackedScene" uid="uid://lhv8k0xbbryl" path="res://scenes/pokemon/gen5/krookodile.tscn" id="16_dfk06"]
[ext_resource type="PackedScene" uid="uid://d1fyxpu26mqio" path="res://scenes/pokemon/gen5/leavanny.tscn" id="17_6wvqu"]
[ext_resource type="PackedScene" uid="uid://dxbxofg37miv5" path="res://scenes/interface/quest_panel.tscn" id="17_csu76"]
[ext_resource type="PackedScene" uid="uid://ciflx65hxtdpa" path="res://scenes/pokemon/gen3/latios.tscn" id="17_gl66w"]
[ext_resource type="PackedScene" uid="uid://7p822uy2m0w2" path="res://scenes/pokemon/gen5/liepard.tscn" id="18_0qqdf"]
[ext_resource type="PackedScene" uid="uid://d0vqt872db4tl" path="res://scenes/pokemon/gen3/kyogre.tscn" id="18_egxjy"]
[ext_resource type="PackedScene" uid="uid://bc8rwxqvrpd8t" path="res://scenes/pokemon/gen5/lilligant.tscn" id="19_dac7m"]
[ext_resource type="PackedScene" uid="uid://be674isg7hhjy" path="res://scenes/pokemon/gen3/groudon.tscn" id="19_fn0rc"]
[ext_resource type="PackedScene" uid="uid://b1ji2s0tr8nyp" path="res://scenes/pokemon/gen5/lillipup.tscn" id="20_5840d"]
[ext_resource type="PackedScene" uid="uid://c61lnf7vpv3bf" path="res://scenes/pokemon/gen3/rayquaza.tscn" id="20_wmw3a"]
[ext_resource type="PackedScene" uid="uid://xvxs3ilsypkv" path="res://scenes/pokemon/gen5/munna.tscn" id="21_q27k6"]
[ext_resource type="PackedScene" uid="uid://b3ssitmgh4uoc" path="res://scenes/pokemon/gen3/jirachi.tscn" id="21_uhv7v"]
[ext_resource type="PackedScene" uid="uid://2oy2ka8j1kki" path="res://scenes/pokemon/gen5/musharna.tscn" id="22_2qvgk"]
[ext_resource type="PackedScene" uid="uid://cygef5pvqr3sd" path="res://scenes/pokemon/gen3/deoxys.tscn" id="22_3sg36"]
[ext_resource type="PackedScene" uid="uid://bvd101o6hdf35" path="res://scenes/pokemon/gen4/uxie.tscn" id="23_ei4qb"]
[ext_resource type="PackedScene" uid="uid://bs753fqants8" path="res://scenes/pokemon/gen5/oshawott.tscn" id="23_emfly"]
[ext_resource type="PackedScene" uid="uid://d0tmmc08ldslk" path="res://scenes/pokemon/gen4/mesprit.tscn" id="24_67o8b"]
[ext_resource type="PackedScene" uid="uid://bp3ij2vnvdyre" path="res://scenes/pokemon/gen5/palpitoad.tscn" id="24_a4727"]
[ext_resource type="PackedScene" uid="uid://bwgoudrr24t4m" path="res://scenes/pokemon/gen5/panpour.tscn" id="25_10bxp"]
[ext_resource type="PackedScene" uid="uid://cq3g75mk3ea06" path="res://scenes/pokemon/gen4/azelf.tscn" id="25_yv1no"]
[ext_resource type="PackedScene" uid="uid://cp5kiacr3kgm4" path="res://scenes/pokemon/gen5/pansage.tscn" id="26_c8wnc"]
[ext_resource type="PackedScene" uid="uid://dvga1hr7xuufa" path="res://scenes/pokemon/gen4/dialga.tscn" id="26_qa4ej"]
[ext_resource type="PackedScene" uid="uid://b1gsigot7xjl3" path="res://scenes/pokemon/gen5/pansear.tscn" id="27_alopl"]
[ext_resource type="PackedScene" uid="uid://cxgtvuq24fymt" path="res://scenes/pokemon/gen4/palkia.tscn" id="27_yuepa"]
[ext_resource type="PackedScene" uid="uid://bl2axoksvfbey" path="res://scenes/pokemon/gen4/heatran.tscn" id="28_0hqco"]
[ext_resource type="PackedScene" uid="uid://cn6mqtgsaw7sj" path="res://scenes/pokemon/gen5/patrat.tscn" id="28_pakcu"]
[ext_resource type="PackedScene" uid="uid://y2o85cgbhjog" path="res://scenes/interface/achievements.tscn" id="28_r0gsr"]
[ext_resource type="PackedScene" uid="uid://brtqw5w6neyp8" path="res://scenes/pokemon/gen5/petilil.tscn" id="29_fu67w"]
[ext_resource type="PackedScene" uid="uid://c7pto7tetxlui" path="res://scenes/pokemon/gen4/regigigas.tscn" id="29_tqefq"]
[ext_resource type="PackedScene" uid="uid://c6dsdlnmmq5q2" path="res://scenes/pokemon/gen4/giratina.tscn" id="30_0gadb"]
[ext_resource type="PackedScene" uid="uid://ccp0p87ri3sjd" path="res://scenes/pokemon/gen5/pidove.tscn" id="30_3t7xa"]
[ext_resource type="PackedScene" uid="uid://bdhgmrjip5138" path="res://scenes/pokemon/gen5/pignite.tscn" id="31_pf02k"]
[ext_resource type="PackedScene" uid="uid://cde5yocg5g031" path="res://scenes/pokemon/gen4/cresselia.tscn" id="31_uap65"]
[ext_resource type="Texture2D" uid="uid://byy2c6vkoo27w" path="res://assets/prefabs/interface/Background Static.png" id="32_10lhj"]
[ext_resource type="PackedScene" uid="uid://cd16vejwmqgyo" path="res://scenes/pokemon/gen5/purrloin.tscn" id="32_gyopj"]
[ext_resource type="PackedScene" uid="uid://nvolieq4fvj0" path="res://scenes/pokemon/gen4/manaphy.tscn" id="32_mn7i6"]
[ext_resource type="PackedScene" uid="uid://dr0jcolq1lfex" path="res://scenes/pokemon/gen5/roggenrola.tscn" id="33_0cbif"]
[ext_resource type="PackedScene" uid="uid://hqeirsf05yl8" path="res://scenes/pokemon/gen4/darkrai.tscn" id="33_85oiq"]
[ext_resource type="Texture2D" uid="uid://bdxlee5hqcw68" path="res://assets/prefabs/interface/Background Bar.png" id="33_i434h"]
[ext_resource type="PackedScene" uid="uid://v3blpc8w8lld" path="res://scenes/pokemon/gen4/shaymin.tscn" id="34_3mex6"]
[ext_resource type="PackedScene" uid="uid://upx5nojgb0i6" path="res://scenes/pokemon/gen5/samurott.tscn" id="34_4ikw2"]
[ext_resource type="PackedScene" uid="uid://d1kn352toww3d" path="res://scenes/pokemon/gen4/arceus.tscn" id="35_4sp70"]
[ext_resource type="PackedScene" uid="uid://dcttv4dju1tt7" path="res://scenes/pokemon/gen5/sandile.tscn" id="35_vpg5p"]
[ext_resource type="PackedScene" uid="uid://cpv33nx13dqio" path="res://scenes/pokemon/gen5/sawk.tscn" id="36_jv33t"]
[ext_resource type="PackedScene" uid="uid://dn6w01esyodeq" path="res://scenes/pokemon/gen5/scolipede.tscn" id="37_16ttq"]
[ext_resource type="PackedScene" uid="uid://d3dox1qpfp427" path="res://scenes/pokemon/gen5/seismitoad.tscn" id="38_ct788"]
[ext_resource type="PackedScene" uid="uid://ddxwsla5o5niw" path="res://scenes/pokemon/gen5/serperior.tscn" id="39_oky02"]
[ext_resource type="PackedScene" uid="uid://okp25c0knhm3" path="res://scenes/pokemon/gen5/servine.tscn" id="40_75y3r"]
[ext_resource type="PackedScene" uid="uid://bw0ybq5xm25cq" path="res://scenes/pokemon/gen5/sewaddle.tscn" id="41_20cxg"]
[ext_resource type="PackedScene" uid="uid://b6is8khn52mmh" path="res://scenes/pokemon/gen5/simipour.tscn" id="42_n750v"]
[ext_resource type="PackedScene" uid="uid://ys0ijjdgmj88" path="res://scenes/pokemon/gen5/simisage.tscn" id="43_4l8m8"]
[ext_resource type="PackedScene" uid="uid://n05wc6dwj7x7" path="res://scenes/interface/pokemon_bank.tscn" id="43_6el84"]
[ext_resource type="PackedScene" uid="uid://bh8eq7sldu57w" path="res://scenes/pokemon/gen5/simisear.tscn" id="44_73eb4"]
[ext_resource type="PackedScene" uid="uid://b8q2axgalp7yj" path="res://scenes/pokemon/gen5/snivy.tscn" id="45_6rxd8"]
[ext_resource type="PackedScene" uid="uid://cxv2y6l7l1vxr" path="res://scenes/pokemon/gen5/stoutland.tscn" id="46_rtecm"]
[ext_resource type="PackedScene" uid="uid://cgbjm53abtwjc" path="res://scenes/pokemon/gen5/swadloon.tscn" id="47_b60f4"]
[ext_resource type="Texture2D" uid="uid://mm66l04dyxrc" path="res://assets/prefabs/interface/indicador.png" id="47_tfj72"]
[ext_resource type="PackedScene" uid="uid://bul7kua1vw8jj" path="res://scenes/interface/party_slot.tscn" id="48_6thqy"]
[ext_resource type="PackedScene" uid="uid://c1vxxv0b7a5iw" path="res://scenes/pokemon/gen5/swoobat.tscn" id="48_fcfl1"]
[ext_resource type="PackedScene" uid="uid://dxjhqoj7a75jd" path="res://scenes/pokemon/gen5/tepig.tscn" id="49_u28ly"]
[ext_resource type="PackedScene" uid="uid://blu46gau0lbmd" path="res://scenes/pokemon/gen5/throh.tscn" id="50_v6fg0"]
[ext_resource type="PackedScene" uid="uid://clws2oakxa21q" path="res://scenes/pokemon/gen5/timburr.tscn" id="51_yvtot"]
[ext_resource type="PackedScene" uid="uid://dbieynntiojjv" path="res://scenes/pokemon/gen5/tranquill.tscn" id="52_a0s0s"]
[ext_resource type="PackedScene" uid="uid://qy3ohajfu85w" path="res://scenes/pokemon/gen5/tympole.tscn" id="53_syf88"]
[ext_resource type="PackedScene" uid="uid://4kyohsl0avmp" path="res://scenes/pokemon/gen5/unfezant.tscn" id="54_qblln"]
[ext_resource type="PackedScene" uid="uid://cdhnad3oe130c" path="res://scenes/pokemon/gen5/venipede.tscn" id="55_jxaki"]
[ext_resource type="PackedScene" uid="uid://5ej8kyg2p1ku" path="res://scenes/pokemon/gen5/victini.tscn" id="56_33ufc"]
[ext_resource type="PackedScene" uid="uid://davl4xrh16qws" path="res://scenes/pokemon/gen5/watchog.tscn" id="57_kf5ay"]
[ext_resource type="PackedScene" uid="uid://chutyyykvq0bj" path="res://scenes/pokemon/gen5/whimsicott.tscn" id="58_bjrip"]
[ext_resource type="PackedScene" uid="uid://ecnp4m6ovpgp" path="res://scenes/pokemon/gen5/whirlipede.tscn" id="59_dop6r"]
[ext_resource type="PackedScene" uid="uid://dxv2jxacpc74r" path="res://scenes/pokemon/gen5/woobat.tscn" id="60_m75dv"]
[ext_resource type="PackedScene" uid="uid://pcm0spahx7le" path="res://scenes/pokemon/gen5/zebstrika.tscn" id="61_27nxj"]
[ext_resource type="PackedScene" uid="uid://dwwku3dl7y2yj" path="res://scenes/interface/pokedex.tscn" id="154_nlgg3"]
[ext_resource type="PackedScene" uid="uid://cxhi4ktidw6b3" path="res://scenes/interface/map.tscn" id="156_kegge"]

[sub_resource type="LabelSettings" id="LabelSettings_rxdvy"]
line_spacing = 0.0
font = ExtResource("3_a26c1")
font_size = 18
font_color = Color(0.877616, 0.877616, 0.877616, 1)
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i3835"]
texture = ExtResource("32_10lhj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ns6iw"]
texture = ExtResource("33_i434h")

[sub_resource type="LabelSettings" id="LabelSettings_nftdm"]
line_spacing = 0.0
font = ExtResource("3_a26c1")
font_size = 18
font_color = Color(0.877616, 0.877616, 0.877616, 1)
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_do8c8"]
font = ExtResource("3_a26c1")
font_size = 10
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_78fjy"]
line_spacing = 0.0
font = ExtResource("3_a26c1")
font_size = 8
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_woo1w"]
line_spacing = 0.0
font = ExtResource("3_a26c1")
font_size = 8
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_r5mw6"]
line_spacing = 0.0
font = ExtResource("3_a26c1")
font_size = 12
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="BaseMap" type="Control" node_paths=PackedStringArray("spawn_position", "spawn_timer", "screen_capture", "background", "options_container", "button_start_hunting", "info", "info2", "spawn_lendario", "map_name_label", "progress_map_bar", "party_container", "button_remove_party", "timer") groups=["mapa"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d4akg")
spawn_position = NodePath("Background/SpawnPosition")
spawn_timer = NodePath("SpawnTimer")
screen_capture = NodePath("Interface/ScreenCapture")
background = NodePath("Background")
options_container = NodePath("Background/OptionsContainer")
button_start_hunting = NodePath("Background/StartHunting")
info = NodePath("Background/Info")
info2 = NodePath("Background/Info2")
spawn_lendario = NodePath("Background/SpawnLendario")
map_name_label = NodePath("Background/MapName")
progress_map_bar = NodePath("Background/MapProgress")
party_container = NodePath("Background/PartyContainer")
button_remove_party = NodePath("Background/RemoveParty")
timer = NodePath("Timer")
map_name = "01"
pokemon_list = Array[PackedScene]([ExtResource("2_231kt"), ExtResource("3_qs2sg"), ExtResource("4_j2f0e"), ExtResource("5_ci1oi"), ExtResource("6_uj80e"), ExtResource("7_nsdw6"), ExtResource("8_bxb4p"), ExtResource("9_oq7tt"), ExtResource("10_1s2q5"), ExtResource("11_4iu6b"), ExtResource("12_68g6d"), ExtResource("13_bsw4g"), ExtResource("14_euyid"), ExtResource("15_nj8m4"), ExtResource("16_dfk06"), ExtResource("17_6wvqu"), ExtResource("18_0qqdf"), ExtResource("19_dac7m"), ExtResource("20_5840d"), ExtResource("21_q27k6"), ExtResource("22_2qvgk"), ExtResource("23_emfly"), ExtResource("24_a4727"), ExtResource("25_10bxp"), ExtResource("26_c8wnc"), ExtResource("27_alopl"), ExtResource("28_pakcu"), ExtResource("29_fu67w"), ExtResource("30_3t7xa"), ExtResource("31_pf02k"), ExtResource("32_gyopj"), ExtResource("33_0cbif"), ExtResource("34_4ikw2"), ExtResource("35_vpg5p"), ExtResource("36_jv33t"), ExtResource("37_16ttq"), ExtResource("38_ct788"), ExtResource("39_oky02"), ExtResource("40_75y3r"), ExtResource("41_20cxg"), ExtResource("42_n750v"), ExtResource("43_4l8m8"), ExtResource("44_73eb4"), ExtResource("45_6rxd8"), ExtResource("46_rtecm"), ExtResource("47_b60f4"), ExtResource("48_fcfl1"), ExtResource("49_u28ly"), ExtResource("50_v6fg0"), ExtResource("51_yvtot"), ExtResource("52_a0s0s"), ExtResource("53_syf88"), ExtResource("54_qblln"), ExtResource("55_jxaki"), ExtResource("56_33ufc"), ExtResource("57_kf5ay"), ExtResource("58_bjrip"), ExtResource("59_dop6r"), ExtResource("60_m75dv"), ExtResource("61_27nxj")])
pokemon_legendary_list = Array[PackedScene]([ExtResource("2_uu6u3"), ExtResource("3_ox3qn"), ExtResource("4_55rk3"), ExtResource("5_407qi"), ExtResource("6_q7q16"), ExtResource("7_78ihx"), ExtResource("8_secvh"), ExtResource("9_w86nl"), ExtResource("10_hkum5"), ExtResource("11_3rsnu"), ExtResource("12_c8i4c"), ExtResource("13_4tejs"), ExtResource("14_loiwo"), ExtResource("15_23uya"), ExtResource("16_aod8q"), ExtResource("17_gl66w"), ExtResource("18_egxjy"), ExtResource("19_fn0rc"), ExtResource("20_wmw3a"), ExtResource("21_uhv7v"), ExtResource("22_3sg36"), ExtResource("23_ei4qb"), ExtResource("24_67o8b"), ExtResource("25_yv1no"), ExtResource("26_qa4ej"), ExtResource("27_yuepa"), ExtResource("28_0hqco"), ExtResource("29_tqefq"), ExtResource("30_0gadb"), ExtResource("31_uap65"), ExtResource("32_mn7i6"), ExtResource("33_85oiq"), ExtResource("34_3mex6"), ExtResource("35_4sp70")])
metadata/_edit_vertical_guides_ = [-126.0]

[node name="Interface" type="CanvasLayer" parent="."]

[node name="Pokedex" parent="Interface" instance=ExtResource("154_nlgg3")]

[node name="PokemonBank" parent="Interface" instance=ExtResource("43_6el84")]

[node name="ScreenCapture" parent="Interface" instance=ExtResource("1_n6ccm")]

[node name="Shop" parent="Interface" instance=ExtResource("3_h25u6")]
visible = false

[node name="Map" parent="Interface" instance=ExtResource("156_kegge")]

[node name="QuestPanel" parent="Interface" instance=ExtResource("17_csu76")]

[node name="Achievements" parent="Interface" instance=ExtResource("28_r0gsr")]

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_eruwt")

[node name="MapName" type="Label" parent="Background"]
layout_mode = 1
offset_left = 24.0
offset_top = 24.0
offset_right = 101.0
offset_bottom = 43.0
label_settings = SubResource("LabelSettings_rxdvy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MapProgress" type="ProgressBar" parent="Background"]
layout_mode = 1
offset_left = 15.0
offset_top = 45.0
offset_right = 112.0
offset_bottom = 58.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_a26c1")
theme_override_font_sizes/font_size = 12
theme_override_styles/background = SubResource("StyleBoxTexture_i3835")
theme_override_styles/fill = SubResource("StyleBoxTexture_ns6iw")
max_value = 19.0
step = 0.0

[node name="SpawnLendario" type="Label" parent="Background"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -365.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 35.0
grow_horizontal = 0
text = "Um Pokémon Lendário está no local!!!"
label_settings = SubResource("LabelSettings_nftdm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpawnPosition" type="Marker2D" parent="Background"]
position = Vector2(278, 144)

[node name="Info" type="Label" parent="Background"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.0
offset_top = 68.5
offset_right = 131.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
text = "Você encontrou um Charizard! Deseja Captura-lo?"
label_settings = SubResource("LabelSettings_do8c8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Info2" type="Label" parent="Background"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.5
offset_top = 48.5
offset_right = 34.5
offset_bottom = 61.5
grow_horizontal = 2
grow_vertical = 2
text = "Buscando..."
label_settings = SubResource("LabelSettings_do8c8")
horizontal_alignment = 1

[node name="OptionsContainer" type="HBoxContainer" parent="Background"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -47.0
offset_top = -60.0
offset_right = 47.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 15

[node name="Sim" type="Button" parent="Background/OptionsContainer"]
layout_mode = 2
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_a26c1")
theme_override_font_sizes/font_size = 16
text = "Sim"

[node name="Nao" type="Button" parent="Background/OptionsContainer"]
layout_mode = 2
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_a26c1")
theme_override_font_sizes/font_size = 16
text = "Não"

[node name="StartHunting" type="Button" parent="Background"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -66.0
offset_top = -51.0
offset_right = 67.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_a26c1")
theme_override_font_sizes/font_size = 16
text = "Iniciar Busca"

[node name="Expand" type="TextureButton" parent="Background"]
layout_mode = 2
offset_left = 33.0
offset_top = 70.0
offset_right = 48.0
offset_bottom = 87.0
pivot_offset = Vector2(7.5, 8.5)
texture_normal = ExtResource("47_tfj72")
ignore_texture_size = true
stretch_mode = 5

[node name="QuestInProgress" type="Label" parent="Background"]
layout_mode = 2
offset_left = 51.0
offset_top = 73.5
offset_right = 128.0
offset_bottom = 82.5
text = "Quests Ativas: 0 / 5"
label_settings = SubResource("LabelSettings_78fjy")

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
visible = false
layout_mode = 0
offset_left = 9.0
offset_top = 95.0
offset_right = 160.0
offset_bottom = 184.0
theme_override_constants/separation = 10

[node name="Quest1" type="Label" parent="Background/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_woo1w")
horizontal_alignment = 1

[node name="Quest2" type="Label" parent="Background/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_woo1w")
horizontal_alignment = 1

[node name="Quest3" type="Label" parent="Background/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_woo1w")
horizontal_alignment = 1

[node name="Quest4" type="Label" parent="Background/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_woo1w")
horizontal_alignment = 1

[node name="Quest5" type="Label" parent="Background/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_woo1w")
horizontal_alignment = 1

[node name="Party" type="Label" parent="Background"]
visible = false
layout_mode = 2
offset_left = 438.0
offset_top = 234.0
offset_right = 473.0
offset_bottom = 247.0
text = "Party"
label_settings = SubResource("LabelSettings_r5mw6")
horizontal_alignment = 1

[node name="PartyContainer" type="HBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -178.0
offset_top = -48.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 10
alignment = 1

[node name="PartySlot" parent="Background/PartyContainer" instance=ExtResource("48_6thqy")]
layout_mode = 2

[node name="RemoveParty" type="Button" parent="Background"]
visible = false
layout_mode = 0
offset_left = 432.0
offset_top = 227.0
offset_right = 472.0
offset_bottom = 244.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_a26c1")
theme_override_font_sizes/font_size = 8
text = "Remove"

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="Background/OptionsContainer/Sim" to="." method="_on_sim_pressed"]
[connection signal="pressed" from="Background/OptionsContainer/Nao" to="." method="_on_nao_pressed"]
[connection signal="pressed" from="Background/StartHunting" to="." method="_on_start_hunting_pressed"]
[connection signal="pressed" from="Background/Expand" to="." method="_on_expand_pressed"]
[connection signal="pressed" from="Background/RemoveParty" to="." method="_on_remove_party_pressed"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
